# Business_tools

./: .dockerignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml  readme
frontend/: Dockerfile  app.js  docker-entrypoint.sh  env.js  env.template.js  index.html  nginx.conf  styles.css
src/invoice_tool/: __init__.py  app.py  config.py  db.py  models.py  schemas.py  security.py
src/invoice_tool/interfaces/: datev.py  peppol.py
src/invoice_tool/routers/: compliance.py  invoices.py  reporting.py  users.py
src/invoice_tool/services/: archive.py  audit.py  epc_qr.py  numbering.py  payments.py  pdf.py  security.py  tax.py  validators.py  vies.py  xrechnung.py  zugferd.py
tests/: test_invoice_flow.py  test_tax_service.py
