[project]
name = "invoice-tool"
version = "0.1.0"
description = "German-compliant online invoicing platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Business Tools", email = "support@example.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.dependencies]
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.18"
sqlalchemy = "^2.0.29"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
passlib = "^1.7.4"
pyotp = "^2.9.0"
segno = "^1.6.1"
reportlab = "^4.1.0"
lxml = "^5.2.1"
cryptography = "^42.0.7"
python-dateutil = "^2.9.0"
python-iso639 = "^2024.4.22"
iso4217 = "^1.11.20220401"
pendulum = "^3.0.0"
pycountry = "^23.12.11"
python-stdnum = "^1.19"
pypng = "^0.20220715.0"

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1.18"]

[project.urls]
Homepage = "https://example.com/invoice-tool"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
